--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ﻿keyboard == 0.13.5
-PyQt6==6.3.0
+PyQt6>=6.3.0
 requests==2.27.1
 unidic==1.1.0
 unidic-lite==1.0.8
@@ -13,6 +13,6 @@ numpy==1.21.5
 fugashi==1.1.2
 tencentcloud-sdk-python==3.0.598
 pyinstaller==4.10
-pypiwin32==223
+PyWin32==303
 mecab-python3==1.0.4
 PyYAML==6.0
